tests/NormalTests/paczka1/fuzzy1/21935977.err
Error in line 1: wFc S41 37,8
Error in line 9: X5sD4 A485 68,2
Error in line 10: X5sD4 S41 33,6
Error in line 15: rC1JjDJloPy A537 36,0
Error in line 5: E9H S41 47,9
Error in line 22: wFc S41 62,9
Error in line 26: rC1JjDJloPy S41 12,3
Error in line 27: rC1JjDJloPy S69 82,4
Error in line 30: A485 S69 12,5
